--- a/.gitmodules
+++ b/.gitmodules
@@ -2,11 +2,14 @@
 	path = .registry
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
+	branch = HEAD
 [submodule "fracdiff"]
 	path = fracdiff
 	url = https://github.com/mmaechler/fracdiff
 	shallow = true
+	branch = HEAD
 [submodule "supclust"]
 	path = supclust
 	url = https://github.com/mmaechler/supclust
 	shallow = true
+	branch = HEAD
