--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,10 @@
 	path = fracdiff
 	url = https://github.com/mmaechler/fracdiff
 	shallow = true
+[submodule "sfsmisc"]
+	path = sfsmisc
+	url = https://github.com/mmaechler/sfsmisc
+	shallow = true
 [submodule "supclust"]
 	path = supclust
 	url = https://github.com/mmaechler/supclust
