--- a/.gitmodules
+++ b/.gitmodules
@@ -8,6 +8,11 @@
 	url = https://github.com/mmaechler/r-bitops
 	shallow = true
 	registered = true
+[submodule "diptest"]
+	path = diptest
+	url = https://github.com/mmaechler/diptest
+	shallow = true
+	registered = true
 [submodule "fracdiff"]
 	path = fracdiff
 	url = https://github.com/mmaechler/fracdiff
