--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,8 @@
 	url = https://github.com/mmaechler/sfsmisc
 	shallow = true
 	registered = true
+[submodule "supclust"]
+	path = supclust
+	url = https://github.com/mmaechler/supclust
+	shallow = true
+	registered = true
